# course_work_parser

./: README.md  pyproject.toml
src/api_classes/: general_api_class.py  hh_api_class.py  sj_api_class.py
src/interact_func/: interaction_func.py  python.json
src/savers/: __init__.py  abc_saver.py
src/savers/specialized_savers/: json_saving.py
src/vacancy_class/: vacancy_class.py
src/vacancy_classes/: vacancy_class.py  vacancy_operator.py
