[tool.poetry]
name = "course-work-parser-4"
version = "0.1.0"
description = ""
authors = ["Tsurkan <mikh.tsurkan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
requests = "^2.31.0"
accessify = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
